--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,106 +1,90 @@
-//@import "bootstrap.min";
-$background-color: #737272;
-$primary-text: #fefefe;
-$secondary-text: #84a72c;
-$placehoder-text: #848484;
-$inshadow: #2B2B2B;
+@import 'subscribe';
+$primary-bg-color: #4caf50;
+$whitish: #f5f5f5;
 
 html,body{
-  background: url('img/bg.png') $background-color;
+  //background: url('img/bg.png') $background-color;
   font-family: 'Roboto', sans-serif;
 }
 
-.main{
-  margin: 100px 10% 0 10%;
-  color: $primary-text;
-  font-size: 18px;
-  span{
-    color: $secondary-text;
-    font-weight: 700;
+#landing-page{
+  .row{
+    margin: 0;
   }
-  #logo-top{
-    font-size: 70px;
+
+  section{
+    background: #eee ;
+    min-height: 800px;
+  }
+  .guide{
+    max-width: 1000px;
+  }
+  .fright{
+    float: right;
+  }
+  nav#nav1, nav#nav2{
+    border: none;
+    border-radius: 0;
+    a{
+      color: $whitish;
+    }
+  }
+  nav#nav1{
+    background: none;
+  }
+  nav#nav2{
+    background: $primary-bg-color;
+    box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.22);
+
+    ul li.active a{
+      color: #444;
+      background: none;
+    }
+  }
+
+  .but{
+    border-radius: 2px;
+    box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.1);
+    border: none;
+  }
+  .bg-white{
+    background: $whitish;
+    color: $primary-bg-color;
+  }
+  .bg-green{
+    background: $primary-bg-color;
+    color: $whitish;
+  }
+
+  .parent {
+    position: relative;
+  }
+  .child-center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .w576{
+    max-width: 576px;
     text-align: center;
   }
 
-  #desc-cont{
-    .phrase{
-      font-size: 50px;
-      margin: 0 0 20px 0;
+  #home{
+    background: #0d2c10 url('img/backtruck.png') no-repeat;
+    background-size:     cover;
+    background-position: center center;
+    #home-text1{
+      font-size: 54px;
+      color: #e5e5e5;
     }
-
-    .long-desc{
+    #home-text2{
       font-size: 20px;
+      color: #e5e5e5;
     }
-  }
-
-  #input-cont{
-    overflow: hidden;
-    overflow-y: auto;
-    width: 100%;
-    border-radius: 10px;
-    box-shadow: 0 2px #565454;
-    input[type="email"] {
-      background: #3c3838;
-      font-size: 30px;
-      color: $primary-text;
-      width: 100%;
-      height: 100px;
-      padding: 0 200px 0 20px;
-      float: left;
-      border-radius: 10px;
-      border: 0;
-      box-sizing: border-box;
-      -webkit-box-sizing:border-box;
-      -moz-box-sizing: border-box;
-
+    .mag-bottom{
+      margin-bottom: 20px;
     }
-    button {
-      background: url('img/button-bg.png') $secondary-text;
-      font-size: 30px;
-      font-weight: 900;
-      color: $primary-text;
-      float: right;
-      width: auto;
-      height: 96px;
-      margin: 2px 2px 2px -200px;
-      border: 0;
-      border-radius: 10px;
-      text-shadow: 2px 1px 1px #7C9C27;
-    }
-    ::-webkit-input-placeholder { /* Chrome */
-      color: $placehoder-text;
-    }
-    :-ms-input-placeholder { /* IE 10+ */
-      color: $placehoder-text;
-    }
-    ::-moz-placeholder { /* Firefox 19+ */
-      color: $placehoder-text;
-      opacity: 1;
-    }
-    :-moz-placeholder { /* Firefox 4 - 18 */
-      color: $placehoder-text;
-      opacity: 1;
-    }
-    .has-error{
-      input{
-        border: 2px solid #A50505;
-        overflow: auto;
-      }
-    }
-  }
-
-  #social-cont{
-    font-weight: 700;
-  }
-
-  .inshadow {
-     -moz-box-shadow:    inset 0 0 20px 2px $inshadow;
-     -webkit-box-shadow: inset 0 0 20px 2px $inshadow;
-     box-shadow:         inset 0 0 20px 2px $inshadow;
-  }
-
-  .bottom-margin{
-    margin-bottom: 50px;
   }
 }
